cmake_minimum_required(VERSION 3.10)
project(gui_wrapper VERSION 0.1)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)


add_subdirectory(dependencies)
set(GUI_WRAPPER_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
set(GUI_WRAPPER_SUBPROJECT_INCLUDE_DIRS ${SUBPROJECT_INCLUDE_DIRS})
add_subdirectory(src)

set (GUI_WRAPPER_LIBRARIES ${GUI_WRAPPER_SUBPROJECTS} PARENT_SCOPE)
message("GUI Wrapper Subprojects: ${GUI_WRAPPER_SUBPROJECTS}")
